# final-employee-management

./: CMakeLists.txt  addEmployee.c  addEmployee.h  deleteEmployee.c  deleteEmployee.h  display.c  display.h  fileHandling.c  fileHandling.h  main.c  menu.c  menu.h  searchEmployee.c  searchEmployee.h  sortEmployee.c  sortEmployee.h  structures.h  updateEmployee.c  updateEmployee.h
